syntax = "proto3";

package keyproto;

option go_package = "github.com/edgelesssys/constellation/state/keyservice/keyproto";

service API {
    rpc PushStateDiskKey(PushStateDiskKeyRequest) returns (PushStateDiskKeyResponse);
}

message PushStateDiskKeyRequest {
    bytes state_disk_key = 1;
    bytes measurement_secret = 2;
}

message PushStateDiskKeyResponse {
}
